Fix readability of article

--- a/app/assets/stylesheets/core.scss
+++ b/app/assets/stylesheets/core.scss
@@ -240,25 +240,26 @@ body {
 
 .art-content {
   font-family: 'Exo 2', sans-serif;
-  font-weight: 300;
-  letter-spacing: -.003em;
-  color: rgba(0,0,0,.8);
-
-  @media only screen and (min-width : 420px) {
-  font-size: 19px;
+  font-weight: 400;
   line-height: 1.58;
+  letter-spacing: -.003em;
+  color: rgba(0,0,0,.84);
+  padding-bottom: 2rem;
+  padding-top: 2rem;
+
+  @media only screen and (min-width : 520px) {
+    font-size: 2rem;
   }
 
-  @media only screen and (max-width : 420px) {
-    font-size: 18px;
-    line-height: 1.35;
-    padding-right: 10px;
+  @media only screen and (max-width : 520px) {
+    padding-right: 1rem;
+    font-size: 2.3rem;
   }
 }
 
 .art-content > div:first-of-type:first-letter {
   color: black;
-  font-size: 1.7em;
+  font-size: 2.8em;
 }
 
 .art-image {
